Ajustes (favicon, contexto, componente Maps) e novos componentes.

--- a/ui-showcase/src/main/java/org/opensingular/singular/form/showcase/view/template/Header.html
+++ b/ui-showcase/src/main/java/org/opensingular/singular/form/showcase/view/template/Header.html
@@ -21,7 +21,7 @@
         <div class="page-header-inner">
             <!-- BEGIN LOGO -->
             <div class="page-logo">
-                <a href="/showcase">
+                <a href="/">
                     <div wicket:id="brandLogo" class="logo-default"/>
                 </a>
 
